[tool.poetry]
name = "portfolio-optimization"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pandas = "^2.2.2"
jupyter = "^1.0.0"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
black = {extras = ["jupyter"], version = "^24.4.2"}
scipy = "^1.13.1"
pyportfolioopt = "^1.5.5"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
typer = "^0.12.3"
python-dotenv = "^1.0.1"
alpha-vantage = "^2.3.1"
tqdm = "^4.66.4"
isort = "^5.13.2"
boto3 = "^1.34.144"
rpy2 = "^3.5.16"
statsmodels = "^0.14.2"
xgboost = "^2.1.0"
pmdarima = "^2.0.4"
matplotlib = "==3.5.0"
tikzplotlib = "==0.10.1"
webcolors = "==1.11.1"
skfolio = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
